# Generic-Server-Multithreaded

./: README.md
server/: CMakeLists.txt  cleaner  compile
server/src/classes/ARoom/: ARoom.cpp  ARoom.hpp
server/src/classes/Client/: Client.cpp  Client.hpp
server/src/classes/RoomManager/: IObserver.hpp  RoomManager.cpp  RoomManager.hpp
server/src/classes/Server/: Server.cpp  Server.hpp
server/src/classes/ThreadPool/: ThreadCpp.hpp  ThreadPool.cpp  ThreadPool.hpp
server/src/mains/: main.cpp  mainBuffer.cpp  mainServer.cpp  mainSocketTest_client.cpp  mainSocketTest_server.cpp  mainThreadPoolTest.cpp
server/src/portabilitySolution/abstract/AFactory/: AFactory.cpp  AFactory.hpp  Factories.hpp
server/src/portabilitySolution/abstract/AThread/: AThread.cpp  AThread.hpp
server/src/portabilitySolution/abstract/ICondVar/: ICondVar.hpp
server/src/portabilitySolution/abstract/IMutex/: IMutex.hpp
server/src/portabilitySolution/abstract/ISocket/: ISocket.hpp
server/src/portabilitySolution/concret/LinuxFactory/: LinuxFactory.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxCondVar/: LinuxCondVar.cpp  LinuxCondVar.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxMultiplexer/: LinuxMultiplexer.cpp  LinuxMultiplexer.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxMutex/: LinuxMutex.cpp  LinuxMutex.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxSocket/: ALinuxSocket.cpp  ALinuxSocket.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxSocket/LinuxSocketTCP/: LinuxSocketTCP.cpp  LinuxSocketTCP.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxSocket/LinuxSocketUDP/: LinuxSocketUDP.cpp  LinuxSocketUDP.hpp
server/src/portabilitySolution/concret/LinuxFactory/LinuxThread/: LinuxThread.cpp  LinuxThread.hpp
server/src/portabilitySolution/concret/WinFactory/: WinFactory.cpp  WinFactory.hpp
server/src/portabilitySolution/concret/WinFactory/WinCondVar/: WinCondVar.cpp  WinCondVar.hpp
server/src/portabilitySolution/concret/WinFactory/WinMutex/: WinMutex.cpp  WinMutex.hpp
server/src/portabilitySolution/concret/WinFactory/WinSocket/: WinSocket.cpp  WinSocket.hpp  WinTcpSocket.cpp  WinTcpSocket.hpp  WinUdpSocket.cpp  WinUdpSocket.hpp
server/src/portabilitySolution/concret/WinFactory/WinThread/: WinThread.cpp  WinThread.hpp
server/src/templates/Bind/: Storage.hpp  TypeList.hpp  Value.hpp
server/src/templates/Buffer/: Buffer.cpp  Buffer.hpp
server/src/templates/Functor/: Functor.hpp  Functor_1.hpp  Functor_2.hpp  Type.hpp
server/src/templates/InstanceCounter/: InstanceCounter.hpp
server/src/templates/ReferenceCounter/: ReferenceCounter.cpp  ReferenceCounter.hpp
server/src/templates/SharedPointer/: SharedPointer.hpp  SharedPointerBase.hpp
